tests/cases/ok/dict_keys.p4
def main() -> None:
    colors: dict[str, str] = {"apple": "red", "sky": "blue"}
    names: list[str] = colors.keys()
    print(names)
    print(len(names))
