tests/cases/fail/dict_literal_value_type.p4
def main() -> None:
    colors: dict[str, str] = {"apple": 1}
